sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	
	do {
		var x:Boolean = false
		for (i <- 0 to getNombreValeurs() -2) {
			
			if (plusPetit(i+1,i)) {
			echange(i,i+1);
			x = true} 
		}
	} while(x)
}
